fix: SecurityConfig syntax + add HealthController